2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug with special characters in string constants.

	* tools/bin/cm4.in: Insert string delimiters after inserted hex
	escapes, to prevent adjacent digits from taking part in the
	character code.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance `slr'.
	
	* tools/bin/slr.in: Also use `SLR_RECURSIVE' when processing the
	Fibre input.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Allow to use thread function pointers with muTC-ptl.
	
	* tools/lib/t-ptl/simpl.m4: Do not take the address of the thread
	function when invoking uTC::create.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	* tools/include/svp/compiler.h (alwaysinline): Fix typo.

2009-10-08  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the library.
	
	* tools/include/svp/compiler.h: Introduce new macro
	`use'. (req. by M. Lankamp)

2009-10-07  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Optimize the root SEP allocator.
	
	* lib/src/mtsep.c: Bucket places by power of 2 sizes; remove
	allocated places from their allocation pools during `alloc' and
	put them back during `free'.

2009-10-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Increase C99 compatibility.
	
	* tools/bin/cce.in: Append `-std=gnu99' when compiling C
	natively. (reported by A. Matei)

2009-10-06  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance `slr', most notably to set up gfx output.

	The following options are introduced: `-X' enable graphics, `-Xr'
	set refresh rate, `-Xs' set scaling factors, `-Xd' set output
	dimensions.
	
	* tools/bin/slr.in: Add support for the new options. Document
	them.

	* tools/lib/r-mtalpha-sim.sh.in,	
	* tools/lib/r-mtsparc-sim.sh.in: Use the `gfx' version of the	
	simulator where needed. Also enhance to use the `dbg' version when
	-g is given to `slr'.
	
2009-10-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Introduce performance counters and C99's clock().

	* lib/include/ctime.h,
	* lib/src/mtclock.c: New.
